<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_global">

    <fragment
        android:id="@+id/navigation_global"
        android:name="com.example.covid19.ui.global.GlobalFragment"
        android:label="@string/title_global"
        tools:layout="@layout/fragment_global" />

    <fragment
        android:id="@+id/navigation_countries"
        android:name="com.example.covid19.ui.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.covid19.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>