<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/post_background"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textCasesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dimen_8"
                android:text="@string/worldwide_charts"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chart_combined"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold" />

<!--                    <com.github.mikephil.charting.charts.LineChart-->
<!--                        android:id="@+id/lineChartCombined"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/chart_height"-->
<!--                        android:layout_margin="@dimen/dimen_8"-->
<!--                        android:padding="8dp" />-->

            <!--        <com.google.android.gms.ads.AdView-->
            <!--            android:id="@+id/adViewOne"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center_horizontal"-->
            <!--            android:layout_marginBottom="@dimen/dimen_8"-->
            <!--            ads:adSize="BANNER"-->
            <!--            ads:adUnitId="@string/admob_unit_banner_chart" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chart_confirmed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold" />

<!--                    <com.github.mikephil.charting.charts.LineChart-->
<!--                        android:id="@+id/lineChartCases"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/chart_height"-->
<!--                        android:layout_margin="@dimen/dimen_8"-->
<!--                        android:padding="8dp" />-->

            <!--        <com.google.android.gms.ads.AdView-->
            <!--            android:id="@+id/adViewTwo"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center_horizontal"-->
            <!--            android:layout_marginBottom="@dimen/dimen_8"-->
            <!--            ads:adSize="BANNER"-->
            <!--            ads:adUnitId="@string/admob_unit_banner_chart" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dimen_8"
                android:text="@string/chart_deaths"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold" />

            <!--        <com.github.mikephil.charting.charts.LineChart-->
            <!--            android:id="@+id/lineChartDeaths"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="@dimen/chart_height"-->
            <!--            android:layout_margin="@dimen/dimen_8"-->
            <!--            android:padding="8dp" />-->

            <!--        <com.google.android.gms.ads.AdView-->
            <!--            android:id="@+id/adViewThree"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center_horizontal"-->
            <!--            android:layout_marginBottom="@dimen/dimen_8"-->
            <!--            ads:adSize="BANNER"-->
            <!--            ads:adUnitId="@string/admob_unit_banner_chart" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dimen_8"
                android:text="@string/chart_recovered"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold" />

            <!--        <com.github.mikephil.charting.charts.LineChart-->
            <!--            android:id="@+id/lineChartRecoveries"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="@dimen/chart_height"-->
            <!--            android:layout_margin="@dimen/dimen_8"-->
            <!--            android:padding="8dp" />-->

            <!--        <com.google.android.gms.ads.AdView-->
            <!--            android:id="@+id/adViewFour"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="center_horizontal"-->
            <!--            android:layout_marginTop="@dimen/dimen_4"-->
            <!--            android:layout_marginBottom="@dimen/dimen_8"-->
            <!--            ads:adSize="MEDIUM_RECTANGLE"-->
            <!--            ads:adUnitId="@string/admob_unit_banner_chart" />-->
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>